initial Header Style

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,15 @@
-<p>header works!</p>
+<header>
+  <a href="#1" class="logo onhover">EcomLibrary Store</a>
+  <a href="#2" class="after__logo onhover">deliver to userX</a>
+  <form action="" class="after__logo">
+    <input type="text" placeholder="Search product(s)">
+  </form>
+  <nav class="navbar">
+    <ul>
+      <li><a href="#3" class="onhover">AR <i class="arrow down"></i> </a></li>
+      <li><a href="#4" class="onhover">Hello UserX Accounts & Lists <i class="arrow down"></i></a></li>
+      <li><a href="#5" class="onhover">Returns & Orders</a></li>
+      <li><a href="#6" class="onhover">Cart</a></li>
+    </ul>
+  </nav>
+</header>
