initial input of Header Style

--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -24,6 +24,10 @@ header .after__logo{
   color: white;
   display: block;
 }
+input{
+  color: black;
+  font-weight: 500;
+}
 header .navbar ul{
   list-style: none;
   color: white;
