--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -7,8 +7,12 @@
   <nav class="navbar">
     <ul>
       <li><a href="#3" class="onhover">AR <i class="arrow down"></i> </a></li>
-      <li><a href="#4" class="onhover">Hello UserX Accounts & Lists <i class="arrow down"></i></a></li>
-      <li><a href="#5" class="onhover">Returns & Orders</a></li>
+      <li><a href="#4" class="onhover">
+        <section class="nav-line-1 ">Hello, UserX</section>
+<!--        <span>Accounts & Lists </span>-->
+        <span>Accounts & Lists </span>
+        <i class="arrow down"></i></a></li>
+      <li><a href="#5" class="onhover"><section class="nav-line-1 ">Returns</section> & Orders</a></li>
       <li><a href="#6" class="onhover">Cart</a></li>
     </ul>
   </nav>
