--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,7 +2,17 @@
   <a href="#1" class="logo onhover">EcomLibrary Store</a>
   <a href="#2" class="after__logo onhover">deliver to userX</a>
   <form action="" class="after__logo">
-    <input type="text" placeholder="Search product(s)">
+    <span >
+      <input type="text" placeholder="Search product(s)">
+    </span>
+    <span >
+      <button type="submit" class="searchBtn" >
+<!--        <span style="padding-left: 0.5rem;"></span>-->
+        <i >
+          <img src="./assets/images/search.png" alt="" class="searchIcon" style="align-items: center">
+        </i>
+      </button>
+    </span>
   </form>
   <nav class="navbar">
     <ul>
