--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <header>
-  <a href="#1" class="logo onhover">EcomLibrary Store</a>
+  <a href="#1" class="logo onhover"><section style="color: #fccd52">EcomLibrary</section> Store</a>
   <a href="#2" class="after__logo onhover">deliver to userX</a>
   <form action="" class="after__logo">
     <span >
