--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -60,7 +60,8 @@ header .navbar ul li a{
   font-size: 0.9rem;
   padding: 0.5rem;
   color: white;
-  display: block;
+  /*display: block;*/
+  display: inline-block;
   /*float: right;*/
 }
 .onhover:hover{
@@ -70,6 +71,7 @@ header .navbar ul li a{
   padding: 0;
 }
 .searchBtn{
+  width: 20%;
   /*color: white;*/
   background-color: #fccd52;
   /*padding: 0.5rem;*/
@@ -81,8 +83,14 @@ header .navbar ul li a{
 .searchIcon{
   width: 1.5rem;
 }
+.shoppingIcon{
+  margin-right: 0.1rem;
+  width: 1.5rem;
+  padding-top: 1rem;
+}
 input{
-  padding: 1.4rem 9.9rem 0.9rem 0rem;
+  width: 80%;
+  padding: 1.4rem 1.9rem 0.9rem 1rem;
 
 }
 
