--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,9 +2,7 @@
   <a href="#1" class="logo onhover"><section style="color: #fccd52">EcomLibrary</section> Store</a>
   <a href="#2" class="after__logo onhover">deliver to userX</a>
   <form action="" class="after__logo">
-    <span >
-      <input type="text" placeholder="Search product(s)">
-    </span>
+    <input type="text" placeholder="Search product(s)">
     <span >
       <button type="submit" class="searchBtn" >
 <!--        <span style="padding-left: 0.5rem;"></span>-->
@@ -23,7 +21,14 @@
         <span>Accounts & Lists </span>
         <i class="arrow down"></i></a></li>
       <li><a href="#5" class="onhover"><section class="nav-line-1 ">Returns</section> & Orders</a></li>
-      <li><a href="#6" class="onhover">Cart</a></li>
+      <li>
+        <i>
+          <img src="./assets/images/shoppingCart.png" alt="" class="shoppingIcon" style="display: inline">
+        </i>
+        <a href="#6" class="onhover">
+          Cart
+        </a>
+      </li>
     </ul>
   </nav>
 </header>
