--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,6 +1,6 @@
 *{
   text-decoration: none;
-  text-transform: capitalize;
+  /*text-transform: capitalize;*/
   color: white;
 }
 header{
@@ -29,7 +29,9 @@ header .after__logo{
 input{
   color: black;
   font-weight: 500;
-  text-indent: 0.5rem;
+  width: 80%;
+  padding: 1.4rem 1.9rem 0.9rem 1rem;
+  /*text-indent: 0.01rem;*/
 }
 .nav-line-1 {
  font-weight: 300;
@@ -76,7 +78,7 @@ header .navbar ul li a{
   background-color: #fccd52;
   /*padding: 0.5rem;*/
   /*padding: 0.5rem 0.5rem 1rem 0;*/
-  padding: 0.9rem 0.9rem 0.9rem 0.9rem;
+  padding: 0.9rem 0.9rem 0.95rem 0.9rem;
   color: #03182a;
   cursor: pointer;
 }
@@ -84,15 +86,15 @@ header .navbar ul li a{
   width: 1.5rem;
 }
 .shoppingIcon{
-  margin-right: 0.1rem;
+  /*margin-right: 0.1rem;*/
   width: 1.5rem;
-  padding-top: 1rem;
-}
-input{
-  width: 80%;
-  padding: 1.4rem 1.9rem 0.9rem 1rem;
+  padding-top: 0rem;
 
 }
+/*input{*/
+/*  width: 80%;*/
+/*  padding: 1.4rem 1.9rem 0.9rem 1rem;*/
+/*}*/
 
 
 
