--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
   <a href="#1" class="logo onhover"><section style="color: #fccd52">EcomLibrary</section> Store</a>
-  <a href="#2" class="after__logo onhover">deliver to userX</a>
+  <a href="#2" class="after__logo onhover">Deliver to userX</a>
   <form action="" class="after__logo">
     <input type="text" placeholder="Search product(s)">
     <span >
@@ -22,10 +22,12 @@
         <i class="arrow down"></i></a></li>
       <li><a href="#5" class="onhover"><section class="nav-line-1 ">Returns</section> & Orders</a></li>
       <li>
-        <i>
-          <img src="./assets/images/shoppingCart.png" alt="" class="shoppingIcon" style="display: inline">
-        </i>
+<!--        <i>-->
+<!--          <img src="./assets/images/shoppingCart.png" alt="" class="shoppingIcon" style="display: inline">-->
+<!--        </i>-->
         <a href="#6" class="onhover">
+          <section style="margin-left: 0.5rem;">0</section>
+          <img src="./assets/images/shoppingCart2.png" alt="" class="shoppingIcon" style="display: inline">
           Cart
         </a>
       </li>
