--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,36 +1,48 @@
 <header>
-  <a href="#1" class="logo onhover"><section style="color: #fccd52">EcomLibrary</section> Store</a>
-  <a href="#2" class="after__logo onhover">Deliver to userX</a>
-  <form action="" class="after__logo">
-    <input type="text" placeholder="Search product(s)">
-    <span >
+  <section class="myHeader1">
+    <a href="#1" class="logo onhover"><section style="color: #fccd52">EcomLibrary</section> Store</a>
+    <a href="#2" class="after__logo onhover">Deliver to userX</a>
+    <form action="" class="after__logo">
+      <input type="text" placeholder="Search product(s)">
+      <span >
       <button type="submit" class="searchBtn" >
-<!--        <span style="padding-left: 0.5rem;"></span>-->
         <i >
           <img src="./assets/images/search.png" alt="" class="searchIcon" style="align-items: center">
         </i>
       </button>
     </span>
-  </form>
-  <nav class="navbar">
-    <ul>
-      <li><a href="#3" class="onhover">AR <i class="arrow down"></i> </a></li>
-      <li><a href="#4" class="onhover">
-        <section class="nav-line-1 ">Hello, UserX</section>
-<!--        <span>Accounts & Lists </span>-->
-        <span>Accounts & Lists </span>
-        <i class="arrow down"></i></a></li>
-      <li><a href="#5" class="onhover"><section class="nav-line-1 ">Returns</section> & Orders</a></li>
-      <li>
-<!--        <i>-->
-<!--          <img src="./assets/images/shoppingCart.png" alt="" class="shoppingIcon" style="display: inline">-->
-<!--        </i>-->
-        <a href="#6" class="onhover">
-          <section style="margin-left: 0.5rem;">0</section>
-          <img src="./assets/images/shoppingCart2.png" alt="" class="shoppingIcon" style="display: inline">
-          Cart
-        </a>
-      </li>
-    </ul>
-  </nav>
+    </form>
+    <nav class="navbar">
+      <ul>
+        <li><a href="#3" class="onhover">AR <i class="arrow down"></i> </a></li>
+        <li><a href="#4" class="onhover">
+          <section class="nav-line-1 ">Hello, UserX</section>
+          <span>Accounts & Lists </span>
+          <i class="arrow down"></i></a></li>
+        <li><a href="#5" class="onhover"><section class="nav-line-1 ">Returns</section> & Orders</a></li>
+        <li>
+          <a href="#6" class="onhover">
+            <section style="margin-left: 0.5rem;">0</section>
+            <img src="./assets/images/shoppingCart2.png" alt="" class="shoppingIcon" style="display: inline">
+            Cart
+          </a>
+        </li>
+      </ul>
+    </nav>
+  </section>
+
+  <section class="myHeader2" style=" background-color: #223950;">
+    <nav class="navbar2">
+      <ul>
+        <li><a href="#11">All</a></li>
+        <li><a href="#11">Today's Deal</a></li>
+        <li><a href="#11">Customer Service</a></li>
+        <li><a href="#11">Buy product</a></li>
+        <li><a href="#11">Sell product</a></li>
+        <li><a href="#11">Register</a></li>
+      </ul>
+    </nav>
+  </section>
+
 </header>
+
