--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,8 +1,8 @@
 <header>
   <section class="myHeader1">
-    <a href="#1" class="logo onhover"><section style="color: #fccd52">EcomLibrary</section> Store</a>
-    <a href="#2" class="after__logo onhover">Deliver to userX</a>
-    <form action="" class="after__logo">
+    <a href="#1" class="logo onhover" style="margin-left: 2rem;"><section style="color: #fccd52;">EcomLibrary</section> Store</a>
+    <a href="#2" class="after__logo onhover" style="margin-left: 1.5rem">Deliver to userX</a>
+    <form action="" class="after__logo" style="margin-left: 1.5rem">
       <input type="text" placeholder="Search product(s)">
       <span >
       <button type="submit" class="searchBtn" >
@@ -12,15 +12,16 @@
       </button>
     </span>
     </form>
-    <nav class="navbar">
-      <ul>
-        <li><a href="#3" class="onhover">AR <i class="arrow down"></i> </a></li>
-        <li><a href="#4" class="onhover">
+    <nav class="navbar" >
+      <ul >
+        <li style="margin-left: 1.5rem"><a href="#3" class="onhover">AR <i class="arrow down"></i> </a></li>
+        <li style="margin-left: 1.5rem"><a href="#4" class="onhover">
           <section class="nav-line-1 ">Hello, UserX</section>
           <span>Accounts & Lists </span>
-          <i class="arrow down"></i></a></li>
-        <li><a href="#5" class="onhover"><section class="nav-line-1 ">Returns</section> & Orders</a></li>
-        <li>
+          <i class="arrow down"></i></a>
+        </li>
+        <li style="margin-left: 1.5rem"><a href="#5" class="onhover"><section class="nav-line-1 ">Returns</section> & Orders</a></li>
+        <li style="margin-left: 1.5rem; float: right">
           <a href="#6" class="onhover">
             <section style="margin-left: 0.5rem;">0</section>
             <img src="./assets/images/shoppingCart2.png" alt="" class="shoppingIcon" style="display: inline">
@@ -34,10 +35,26 @@
   <section class="myHeader2" style=" background-color: #223950;">
     <nav class="navbar2">
       <ul>
-        <li><a href="#11">All</a></li>
+        <li>
+          <a href="#11">
+<!--            <img class="shoppingIcon2" src="./assets/images/hamburgerMenuEcom1.png" alt="">-->
+            <section style="display: flex">
+              <span>
+                <h1 class="line--hamburgerMenu"></h1>
+                <h1 class="line--hamburgerMenu"></h1>
+                <h1 class="line--hamburgerMenu"></h1>
+              </span>
+              &nbsp;
+              <span>
+                All
+              </span>
+            </section>
+          </a>
+        </li>
         <li><a href="#11">Today's Deal</a></li>
         <li><a href="#11">Customer Service</a></li>
         <li><a href="#11">Buy product</a></li>
+        <li><a href="#11">Gift Cards</a></li>
         <li><a href="#11">Sell product</a></li>
         <li><a href="#11">Register</a></li>
       </ul>
