--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,8 +2,8 @@
   <section class="myHeader1">
     <a href="#1" class="logo onhover" style="margin-left: 2rem;"><section style="color: #fccd52;">EcomLibrary</section> Store</a>
     <a href="#2" class="after__logo onhover" style="margin-left: 1.5rem">Deliver to userX</a>
-    <form action="" class="after__logo" style="margin-left: 1.5rem">
-      <input type="text" placeholder="Search product(s)">
+    <form action="" class="after__logo2" style="margin-left: 1.5rem">
+      <input type="text" placeholder="Search product(s)" >
       <span >
       <button type="submit" class="searchBtn" >
         <i >
@@ -36,7 +36,7 @@
     <nav class="navbar2">
       <ul>
         <li>
-          <a href="#11">
+          <a href="#11" class="onhover">
 <!--            <img class="shoppingIcon2" src="./assets/images/hamburgerMenuEcom1.png" alt="">-->
             <section style="display: flex">
               <span>
@@ -51,12 +51,12 @@
             </section>
           </a>
         </li>
-        <li><a href="#11">Today's Deal</a></li>
-        <li><a href="#11">Customer Service</a></li>
-        <li><a href="#11">Buy product</a></li>
-        <li><a href="#11">Gift Cards</a></li>
-        <li><a href="#11">Sell product</a></li>
-        <li><a href="#11">Register</a></li>
+        <li><a href="#12" class="onhover">Today's Deal</a></li>
+        <li><a href="#13" class="onhover">Customer Service</a></li>
+        <li><a href="#14" class="onhover">Buy product</a></li>
+        <li><a href="#15" class="onhover">Gift Cards</a></li>
+        <li><a href="#16" class="onhover">Sell product</a></li>
+        <li><a href="#17" class="onhover">Register</a></li>
       </ul>
     </nav>
   </section>
