--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -20,9 +20,7 @@
   display: flex;
   flex-wrap: wrap;
   right: 0; left: 0; top: 0;
-  /*text-align: center;*/
-  /*justify-content: space-evenly;*/
-  padding: 0.75rem 0.5% 0rem;
+  /*padding: 0.75rem 0.5% 0rem;*/
   z-index: 1000;
 }
 .myHeader2{
@@ -31,8 +29,6 @@
   display: flex;
   flex-wrap: wrap;
   right: 0; left: 0; top: 5.5rem;
-  /*text-align: center;*/
-  /*justify-content: space-evenly;*/
   padding: 0.25rem 2rem 0.25rem 2rem;
   z-index: 999;
 }
@@ -45,17 +41,19 @@
 .myHeader1 .logo{
   font-weight: 500;
   font-size: 1.5rem;
+  padding-top: 0.5rem;
   /*color: white;*/
   color: #fccd52;
 }
 .myHeader1 .after__logo{
-  font-size: 0.9rem;
+  font-size: 0.8rem;
   padding: 0.5rem;
+  padding-top: 1.4rem;
   color: white;
-  display: block;
+  display: flex;
 }
 .myHeader1 .after__logo2{
-  width: 40%;
+  width: 38%;
   font-size: 0.9rem;
   padding: 0.5rem;
   color: white;
@@ -96,21 +94,25 @@ input{
 .myHeader1 .navbar ul li{
   position: relative;
   float: left;
+
 }
 .myHeader2 .navbar2 ul li{
   position: relative;
   float: left;
 }
 .myHeader1 .navbar ul li a{
+  /*font-size: 0.875rem;*/
+  font-weight: 600;
   font-size: 0.9rem;
-  padding: 0.5rem;
+  padding: 1.4rem 0.5rem 0.5rem;
   color: white;
   /*display: block;*/
   display: inline-block;
+
   /*float: right;*/
 }
 .myHeader2 .navbar2 ul li a{
-  font-size: 0.9rem;
+  font-size: 0.875rem;
   padding: 0.5rem;
   color: white;
   /*display: block;*/
@@ -141,6 +143,17 @@ input{
   width: 1.5rem;
   padding-top: 0rem;
 
+}
+.locationShoppingIcon{
+  /*margin-right: 0.1rem;*/
+  width: 1.3rem;
+  height: 1.10rem;
+  padding-top: 0rem;
+  margin-top: 0.9rem;
+  display: block;
+
+  background-color: white;
+  border-radius: 1rem;
 }
 .shoppingIcon2{
   /*margin-right: 0.1rem;*/
