--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,14 @@
 <header>
   <section class="myHeader1">
     <a href="#1" class="logo onhover" style="margin-left: 2rem;"><section style="color: #fccd52;">EcomLibrary</section> Store</a>
-    <a href="#2" class="after__logo onhover" style="margin-left: 1.5rem">Deliver to userX</a>
+    <a href="#2" class="after__logo onhover" style="margin-left: 1.5rem">
+      <img src="./assets/images/locationOfShopper.png" alt="" class="locationShoppingIcon">
+      <section>
+        <span style="margin-left: 0.5rem">Deliver to userX</span>
+        <br>
+        <span style="margin-left: 0.5rem; font-weight: 600;">Casablanca 20000</span>
+      </section>
+    </a>
     <form action="" class="after__logo2" style="margin-left: 1.5rem">
       <input type="text" placeholder="Search product(s)" >
       <span >
@@ -22,8 +29,8 @@
         </li>
         <li style="margin-left: 1.5rem"><a href="#5" class="onhover"><section class="nav-line-1 ">Returns</section> & Orders</a></li>
         <li style="margin-left: 1.5rem; float: right">
-          <a href="#6" class="onhover">
-            <section style="margin-left: 0.5rem;">0</section>
+          <a href="#6" class="onhover" style="padding-top: 0.5rem; float: right">
+            <section style="margin-left: 0.5rem; color: orangered">0</section>
             <img src="./assets/images/shoppingCart2.png" alt="" class="shoppingIcon" style="display: inline">
             Cart
           </a>
@@ -57,6 +64,7 @@
         <li><a href="#15" class="onhover">Gift Cards</a></li>
         <li><a href="#16" class="onhover">Sell product</a></li>
         <li><a href="#17" class="onhover">Register</a></li>
+<!--        <li><a href="#18" class="onhover">Shop great deals now</a></li>-->
       </ul>
     </nav>
   </section>
