--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -43,7 +43,7 @@
     <nav class="navbar2">
       <ul>
         <li>
-          <a href="#11" class="onhover">
+          <a href="#11" class="displayLinkOfHeader2 onhover">
 <!--            <img class="shoppingIcon2" src="./assets/images/hamburgerMenuEcom1.png" alt="">-->
             <section style="display: flex">
               <span>
@@ -52,19 +52,19 @@
                 <h1 class="line--hamburgerMenu"></h1>
               </span>
               &nbsp;
-              <span>
+              <span style="font-weight: 600">
                 All
               </span>
             </section>
           </a>
         </li>
-        <li><a href="#12" class="onhover">Today's Deal</a></li>
-        <li><a href="#13" class="onhover">Customer Service</a></li>
-        <li><a href="#14" class="onhover">Buy product</a></li>
-        <li><a href="#15" class="onhover">Gift Cards</a></li>
-        <li><a href="#16" class="onhover">Sell product</a></li>
-        <li><a href="#17" class="onhover">Register</a></li>
-<!--        <li><a href="#18" class="onhover">Shop great deals now</a></li>-->
+        <li><a href="#12" class="onhover displayLinkOfHeader2">Today's Deal</a></li>
+        <li><a href="#13" class="onhover displayLinkOfHeader2">Customer Service</a></li>
+        <li><a href="#14" class="onhover displayLinkOfHeader2">Buy product</a></li>
+        <li><a href="#15" class="onhover displayLinkOfHeader2">Gift Cards</a></li>
+        <li><a href="#16" class="onhover displayLinkOfHeader2">Sell product</a></li>
+        <li><a href="#17" class="onhover displayLinkOfHeader2">Register</a></li>
+        <li><a href="#18" class="onhover displayLastLinkOfHeader2">Shop great deals now</a></li>
       </ul>
     </nav>
   </section>
